<resources>
    <string name="app_name">BizNUS</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_explore">Explore</string>
    <string name="title_For_You">For You</string>
    <string name="title_new">List</string>
    <string name="title_account">Account</string>
    <string name="title_List">List</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="click_to_login">Login now</string>
    <string name="click_to_register">Register now</string>
    <string name="username">Username</string>
    <string name="list">LIST</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="Price">Price</string>
    <string name="logout">Logout</string>
    <string-array name="conditions">
        <item>Choose Condition</item>
        <item>Brand New</item>
        <item>Like New</item>
        <item>Well Used</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>