<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_searchuser"
        android:icon="@drawable/magnifying_glass_black_24dp"
        android:title="Search" />

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/title_new" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/title_account" />


</menu>