<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_explore">

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.biznus.ui.explore.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore">

        <action
            android:id="@+id/action_explore_to_accountFragment"
            app:destination="@id/navigation_account" />

    </fragment>

    <fragment
        android:id="@+id/navigation_searchuser"
        android:name="com.example.biznus.ui.SearchFragment"
        android:label="Search"
        tools:layout="@layout/fragment_search">

        <action
            android:id="@+id/action_search_to_accountFragment"
            app:destination="@id/navigation_account" />

    </fragment>

    <activity
        android:id="@+id/navigation_list"
        android:name="com.example.biznus.ListActivity"
        android:label="@string/title_List"
        tools:layout="@layout/activity_list" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.biznus.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications">

        <action
            android:id="@+id/action_notification_to_listDetail"
            app:destination="@id/listDetail" />

        <action
            android:id="@+id/action_notification_to_accountFragment"
            app:destination="@id/navigation_account" />

    </fragment>

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.biznus.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/listDetail"
        android:name="com.example.biznus.ui.ListingDetailFragment"
        android:label="Listing"
        tools:layout="@layout/fragment_listing_detail"/>

</navigation>